fixed spacings

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -187,6 +187,12 @@ nav {
             border: 3px dashed #ccc;
         }
 
+        li {
+            margin-right: 15px;
+            margin-top: 15px;
+            margin-bottom: 15px;
+        }
+
         img {
             width: 120px;
             height: 120px;
